# offshore_uav

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Inicio.sh  README.md  package.xml  plugins.xml
Media/materials/programs/: SimpleWaves.vert
Media/materials/scripts/: boat.material  oil_rig.material  oil_rigi_old.material  sand.material
asv_wave_sim_gazebo/models/walk/: model.config  model.sdf
asv_wave_sim_gazebo/models/walk/meshes/: walk.dae
asv_wave_sim_gazebo/models/wam-v/: model.urdf.xacro
asv_wave_sim_gazebo/models/wam-v/meshes/: WAM-V-Base.dae
asv_wave_sim_gazebo/models/wam-v_without_color_base/: model.config  model.urdf.xacro  robot.gazebo.xacro
asv_wave_sim_gazebo/models/wam-v_without_color_base/meshes/: WAM-V-without-color-base.dae
asv_wave_sim_gazebo/worlds/: Offshore.world
config/: default.yaml  points.yaml
include/: OffshoreUAV.h
launch/: offshore_rig.launch  offshore_uav.launch
models/offshore_rig/: model.sdf
models/offshore_rig/meshes/: OilRig.dae
offshore_uav_pack/: CMakeLists.txt  package.xml  plugins.xml
offshore_uav_pack/include/: wamv.h  wamv.hh
offshore_uav_pack/launch/: offshore_rig.launch  spawn_sdf.launch  spawn_wamv1.launch  spawn_wamv2.launch  spawn_wamv3.launch  wamv.launch  wamvControl.launch  wamv_usv.launch  wamw.launch
offshore_uav_pack/models/beer_bottle/: model.sdf
offshore_uav_pack/models/beer_bottle/meshes/: beer_bottle.stl
offshore_uav_pack/models/boat_off/: model.config  model.sdf
offshore_uav_pack/models/boat_off/meshes/: boat.mtl
offshore_uav_pack/models/calib_stereo/: model.config  model.sdf
offshore_uav_pack/models/calib_stereo/meshes/: calib_stereo.mtl
offshore_uav_pack/models/competition/arena_spawn/: model.sdf
offshore_uav_pack/models/competition/banner/: model.sdf
offshore_uav_pack/models/competition/base/: model.sdf
offshore_uav_pack/models/competition/container/: model.config  model.sdf
offshore_uav_pack/models/competition/container/meshes/: container.mtl
offshore_uav_pack/models/competition/cost_base/: model.sdf
offshore_uav_pack/models/competition/cost_base/meshes/: cost_base.mtl
offshore_uav_pack/models/competition/equipmentA/: model.sdf
offshore_uav_pack/models/competition/equipmentB/: model.sdf
offshore_uav_pack/models/competition/equipmentC/: model.sdf
offshore_uav_pack/models/competition/equipmentD/: model.sdf
offshore_uav_pack/models/competition/equipmentE/: model.sdf
offshore_uav_pack/models/competition/land_base/: model.sdf
offshore_uav_pack/models/competition/measure_gas_high_base_left/: model.sdf
offshore_uav_pack/models/competition/measure_gas_high_base_right/: model.sdf
offshore_uav_pack/models/competition/measure_gas_land_base/: model.sdf
offshore_uav_pack/models/competition/pipe/: model.config  model.sdf
offshore_uav_pack/models/competition/pipe/meshes/: pipe.mtl
offshore_uav_pack/models/competition/sensor_green/: model.sdf
offshore_uav_pack/models/competition/sensor_red/: model.sdf
offshore_uav_pack/models/competition/unit_box/: model.sdf
offshore_uav_pack/models/cone/: model.config  model.sdf
offshore_uav_pack/models/garbage_bag/: model.config  model.sdf
offshore_uav_pack/models/garbage_bag/meshes/: garbage_bag.mtl
offshore_uav_pack/models/sphere/: model.sdf
offshore_uav_pack/models/square_bottle/: model.config  model.sdf
offshore_uav_pack/models/torus/: model.config  model.sdf
offshore_uav_pack/models/water_bottle/: model.config  model.sdf
offshore_uav_pack/models/water_bottle/meshes/: water_bottle.mtl
offshore_uav_pack/src/: flight.cpp  wamv.cpp
offshore_uav_pack/start/: .tmuxinator.yml  session.yml  uav1_pos.yaml  uav2_pos.yaml  uav3_pos.yaml
offshore_uav_pack/start/custom_configs/: odometry.yaml
offshore_uav_pack/start/start_UAV/: session.yml  uav1_pos.yaml
offshore_uav_pack/start/start_USV/: .tmuxinator.yml  session.yml  usv1_pos.yaml  world.yaml
offshore_uav_pack/worlds/: CHANGELOG.rst  offshore_rig.world.xacro
offshore_uav_pack/worlds/ocean_waves/: model.xacro
src/: OffshoreUAV.cpp
start/: Inicio.sh  offshore_uav.rviz  session.yml  uav1_pos.yaml  world.yaml
start/BashCommands/: my_commands.sh  my_commands2.sh  my_commands3.sh  my_commands4.sh  my_commands5.sh  my_commands6.sh  nversion.sh  trash.sh
usv_gazebo_plugins/: CMakeLists.txt
vrx_gazebo/: CMakeLists.txt
vrx_gazebo/launch/: sandisland.launch
vrx_gazebo/models/robotx_2018_qualifying_avoid_obstacles/: model.sdf
vrx_gazebo/models/robotx_2018_qualifying_avoid_obstacles_buoys/: model.sdf
wamv_description/models/WAM-V-Base/mesh/: WAM-V-Base-2.dae
wamv_description/urdf/: wamv_base_2.urdf.xacro
wamv_gazebo/urdf/: wamv_gazebo.urdf.xacro  wamv_gazebo.xacro
wave_gazebo/: CMakeLists.txt  package.xml
wave_gazebo/world_models/ocean_waves/: model.xacro  model.xacro.erb
wave_gazebo/worlds/: ocean_buoys.world.xacro
wave_gazebo_plugins/: CMakeLists.txt
worlds/: offshore_rig.world
