<?xml version="1.0"?>
<package format="2">
  <name>offshore_uav</name>
  <version>0.6.13</version>
  <description>The offshore_uav package</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>
  <author email="lucasnnobrega@gmail.com">Lucas Nogueira Nobrega</author>


  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>message_filters</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>
</package>
