<?xml version="1.0"?>
<package format="2">
  <name>offshore_uav_pack</name>
  <version>0.6.13</version>
  <description>The offshore_uav package</description>

  <maintainer email="equipe@laser.ufpb.br">Equipe UAV LASER</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ruby</build_depend>

  <exec_depend>wave_gazebo_plugins</exec_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>



  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>

</package>
